# webhooks-demo

./: .env-example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
bots/: discordbot.py  starterbot.py
webhooks_server/: discordbot.py  server.py
