[tool.poetry]
name = "hooks-demo"
version = "0.1.0"
description = "a simple demo using speckle webhooks for discord integration"
authors = ["izzy lyseggen <izzy.lyseggen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
CherryPy = "^18.6.1"
requests = "^2.26.0"
specklepy = "^2.6.7"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.9.3"
devtools = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
